somewhat fixed svgs/overflow scroll

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ p {
         max-width: 70ch;
     }
     @media (width > 1300px) {
-        margin-block-start: calc(var(--spacing)*20);
+        margin-block-start: calc(var(--spacing)*10);
         
     }
 }
@@ -241,12 +241,13 @@ footer {
     justify-content: center;
     align-items: center;
     position: absolute;
-    /* overflow-x: hidden;
-    block-size: 50rem; */
-    /* inline-size: 100%; */
+    overflow-x: hidden;
 
+    /* I tried to make my svgs absolute with this relative but it didn't work so I've adjusted the block-size to get it to work */
     @media (width > 500px) {
         flex-direction: row;
+        block-size: 50rem;
+        align-items:start;
     }
 }
 
@@ -259,6 +260,9 @@ footer {
     }
     @media (width > 950px) {
         transform: scale(1.5);
+    }
+    @media (width > 1200px) {
+        transform: scale(1.5) translateY(-20%) translateX(-20%);
     }
     path {
         fill: var(--article1);
@@ -273,7 +277,9 @@ footer {
     }
     @media (width > 950px) {
         transform: scale(1.5) translateY(50%) translateX(10%);
-
+    }
+    @media (width > 1200px) {
+        transform: scale(1.5) translateY(20%) translateX(0);
     }
     path {
         fill: var(--article2);
@@ -286,7 +292,10 @@ footer {
     @media (width > 500px) {
         transform: scale(2) translateY(30%) translateX(20%);
     }
-     @media (width > 950px) {
+    @media (width > 950px) {
+        transform: scale(1.5) translateY(10%) translateX(20%);
+    }
+    @media (width > 1200px) {
         transform: scale(1.5) translateY(10%) translateX(20%);
     }
     path {
